--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "Utils.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" :"live-server public" ,
+    "babel" :"npx babel src/app.js --out-file=public/app.js --watch"
   },
   "keywords": [],
   "author": "",
