--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,27 @@
   "version": "1.0.0",
   "description": "",
   "main": "Utils.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start" :"live-server" ,
-    "babel" :"npx babel src/app.js --out-file=template.js --watch"
+  "dependencies": {
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.17.6",
-    "@babel/core": "^7.17.8",
+    "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7"
-  }
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.4",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "scripts": {
+    "webpack-build": "webpack --mode production",
+    "start": "webpack-dev-server --open",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "keywords": [],
+  "author": "Hamit Mızrak",
+  "license": "HM"
 }
